@@ -1,13 +1,13 @@
 // This may look like C code, but it is really -*- C++ -*-
 //
-// Copyright Bob Friesenhahn, 1999, 2000
+// Copyright Bob Friesenhahn, 1999, 2000, 2001
 //
 // Simple C++ function wrappers for often used or otherwise
 // inconvenient ImageMagick equivalents
 //
 
-#if !defined(MagickFunctions_header)
-#define MagickFunctions_header
+#if !defined(Magick_Functions_header)
+#define Magick_Functions_header
 
 #include <string>
 
@@ -18,4 +18,4 @@ namespace Magick
   void CloneString( char **destination_, const std::string &source_ );
 
 }
-#endif // MagickFunctions_header
+#endif // Magick_Functions_header
